--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
     <h1>Odin recipies</h1>
     <ul>
-        <li><a href = "recipies/lasagna.html">lasagna</a></li>
+        <li><a href = "recipies/lasagna.html">Lasagna</a></li>
+        <li><a href = "recipies/lemon_chicken.html">Lemon Chicken</a></li>
+        <li><a href = "recipies/pesto_shrimp.html">Pesto Shrimp</a></li>
     </ul>
 </body>
 </html>
